--- a/Cluster2.0.ipynb
+++ b/Cluster2.0.ipynb
@@ -11,11 +11,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "P3h_0tmhMAK3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install -q pyg-lib -f https://data.pyg.org/whl/torch-2.6.0+cu124.html\n",
         "%pip install -q torch torchvision torchaudio\n",
@@ -27,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "metadata": {
         "id": "wCEW-VWFL72r"
       },
@@ -47,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -56,7 +69,7 @@
               "'/home/nicholas_tyy/Documents/TU_Delft/CS4350/proj/GML-Project'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -67,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 27,
       "metadata": {
         "id": "ToKfNRvRkxGc"
       },
@@ -76,7 +89,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "/Users/jylow/Documents/Y3S2/CS4350/GML-Project\n"
+            "[Errno 2] No such file or directory: '../Documents/Y3S2/CS4350/GML-Project'\n",
+            "/home/nicholas_tyy/Documents/TU_Delft/CS4350/proj/GML-Project\n"
           ]
         }
       ],
@@ -87,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 32,
       "metadata": {
         "id": "lqhvjS5eMJnf"
       },
@@ -95,41 +109,39 @@
       "source": [
         "import os\n",
         "import datetime\n",
-        "import pprint\n",
         "import time\n",
         "import pickle\n",
         "\n",
         "import numpy as np\n",
-        "import scipy\n",
         "import torch\n",
         "import torch_geometric\n",
         "import torch.nn as nn\n",
         "import torch_geometric.nn as pyg\n",
         "from torch_geometric.nn import aggr\n",
-        "from torch_geometric.utils import to_scipy_sparse_matrix\n",
-        "from torch_geometric.loader import NeighborLoader\n",
-        "from torch_geometric.data import Batch\n",
-        "from scipy.sparse import tril, coo_matrix\n",
+        "from torch_geometric.data import Batch, Data\n",
+        "from torch_geometric.loader import DataLoader\n",
+        "from torch_geometric.utils import subgraph\n",
         "from tqdm import tqdm\n",
         "\n",
-        "from apps.data import graph_to_matrix, matrix_to_graph, FolderDataset\n",
+        "from apps.data import graph_to_matrix, FolderDataset\n",
         "from neuralif.utils import (\n",
         "    count_parameters, save_dict_to_file,\n",
-        "    condition_number, eigenval_distribution, gershgorin_norm,\n",
         "    TwoHop\n",
         ")\n",
-        "from neuralif.logger import TrainResults, TestResults\n",
+        "from neuralif.logger import TrainResults\n",
         "from neuralif.loss import loss\n",
         "\n",
         "from krylov.cg import preconditioned_conjugate_gradient\n",
         "from krylov.gmres import gmres\n",
         "\n",
-        "from numml.sparse import SparseCSRTensor\n"
+        "from numml.sparse import SparseCSRTensor\n",
+        "\n",
+        "import metis  # pip install metis"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 29,
       "metadata": {
         "id": "ecrpeZYaQSbH"
       },
@@ -158,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 30,
       "metadata": {
         "id": "aBjOJC57Qxhc"
       },
@@ -174,7 +186,21 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 100/100 [04:37<00:00,  2.77s/it]\n"
+            "  2%|▏         | 2/100 [00:07<05:49,  3.57s/it]\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m alpha=\u001b[32m10e-4\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#create_dataset(size, number of samples, density, mode, seed, is_graph, compute_solution)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m create_dataset(n, \u001b[32m100\u001b[39m, alpha=alpha, mode=\u001b[33m'\u001b[39m\u001b[33mtrain\u001b[39m\u001b[33m'\u001b[39m, rs=\u001b[32m0\u001b[39m, graph=\u001b[38;5;28;01mTrue\u001b[39;00m, solution=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      7\u001b[39m create_dataset(n, \u001b[32m10\u001b[39m, alpha=alpha, mode=\u001b[33m'\u001b[39m\u001b[33mval\u001b[39m\u001b[33m'\u001b[39m, rs=\u001b[32m10000\u001b[39m, graph=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      8\u001b[39m create_dataset(n, \u001b[32m10\u001b[39m, alpha=alpha, mode=\u001b[33m'\u001b[39m\u001b[33mtest\u001b[39m\u001b[33m'\u001b[39m, rs=\u001b[32m103600\u001b[39m, graph=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/TU_Delft/CS4350/proj/GML-Project/apps/synthetic.py:92\u001b[39m, in \u001b[36mcreate_dataset\u001b[39m\u001b[34m(n, samples, alpha, sparsity, graph, rs, mode, solution)\u001b[39m\n\u001b[32m     89\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGenerating \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msamples\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m samples for the \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmode\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m dataset.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     91\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m sam \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(samples)):\n\u001b[32m---> \u001b[39m\u001b[32m92\u001b[39m     A, x, b = generate_sparse_random(n, random_state=(rs + sam), alpha=alpha, sparsity=sparsity, sol=solution,\n\u001b[32m     93\u001b[39m                                      ood=(mode == \u001b[33m\"\u001b[39m\u001b[33mtest_ood\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     94\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m graph:\n\u001b[32m     95\u001b[39m         graph = matrix_to_graph(A, b)\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/TU_Delft/CS4350/proj/GML-Project/apps/synthetic.py:66\u001b[39m, in \u001b[36mgenerate_sparse_random\u001b[39m\u001b[34m(n, alpha, sparsity, random_state, sol, ood)\u001b[39m\n\u001b[32m     63\u001b[39m \u001b[38;5;66;03m# compute the solution\u001b[39;00m\n\u001b[32m     64\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sol:\n\u001b[32m     65\u001b[39m     \u001b[38;5;66;03m# generate solution using dense method for accuracy reasons\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m66\u001b[39m     x, _ = spla.cg(A, b)\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     69\u001b[39m     x = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+            "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/GML_proj/lib/python3.12/site-packages/scipy/sparse/linalg/_isolve/iterative.py:417\u001b[39m, in \u001b[36mcg\u001b[39m\u001b[34m(A, b, x0, rtol, atol, maxiter, M, callback)\u001b[39m\n\u001b[32m    414\u001b[39m     r -= alpha*q\n\u001b[32m    415\u001b[39m     rho_prev = rho_cur\n\u001b[32m--> \u001b[39m\u001b[32m417\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m callback:\n\u001b[32m    418\u001b[39m         callback(x)\n\u001b[32m    420\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# for loop exhausted\u001b[39;00m\n\u001b[32m    421\u001b[39m     \u001b[38;5;66;03m# Return incomplete progress\u001b[39;00m\n",
+            "\u001b[31mKeyboardInterrupt\u001b[39m: "
           ]
         }
       ],
@@ -185,13 +211,20 @@
         "\n",
         "#create_dataset(size, number of samples, density, mode, seed, is_graph, compute_solution)\n",
         "create_dataset(n, 100, alpha=alpha, mode='train', rs=0, graph=True, solution=True)\n",
-        "# create_dataset(n, 10, alpha=alpha, mode='val', rs=10000, graph=True)\n",
-        "# create_dataset(n, 10, alpha=alpha, mode='test', rs=103600, graph=True)"
+        "create_dataset(n, 10, alpha=alpha, mode='val', rs=10000, graph=True)\n",
+        "create_dataset(n, 10, alpha=alpha, mode='test', rs=103600, graph=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **CONFIG**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "4bMM1n0TOVNW"
       },
@@ -242,16 +275,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WaOuG4eZ-mKl"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "#if device is linux\n",
-        "# !sudo apt-get install libmetis-dev\n",
-        "# !pip install metis"
+        "# **DATALOADERS**"
       ]
     },
     {
@@ -260,17 +287,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "from torch_geometric.data import Data, Batch\n",
-        "from torch_geometric.loader import DataLoader\n",
-        "from torch_geometric.utils import subgraph\n",
-        "import torch_geometric\n",
-        "import numpy as np\n",
-        "import metis  # pip install metis\n",
-        "import time\n",
-        "import os\n",
+        "def get_dataloader(dataset, n=0, batch_size=1, spd=True, mode=\"train\", size=None, graph=True):\n",
+        "    # Setup datasets\n",
         "\n",
+        "    if dataset == \"random\":\n",
+        "        data = FolderDataset(f\"./dataset/{mode}/\", n, size=size, graph=graph)\n",
+        "    else:\n",
+        "        raise NotImplementedError(\"Dataset not implemented, Available: random\")\n",
+        "\n",
+        "    # Data Loaders\n",
+        "    if mode == \"train\":\n",
+        "        dataloader = DataLoader(data, batch_size=batch_size, shuffle=True)\n",
+        "    else:\n",
+        "        dataloader = DataLoader(data, batch_size=1, shuffle=False)\n",
+        "\n",
+        "    return dataloader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "class ClusterGCNSampler:\n",
         "    def __init__(self, num_clusters, cluster_method='metis'):\n",
         "        self.num_clusters = num_clusters\n",
@@ -527,6 +566,13 @@
         "\n",
         "    print(\"DataLoader ready!\")\n",
         "    return loader"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **MODELS**"
       ]
     },
     {
@@ -894,36 +940,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 19,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "tLw1q2nYR6hl"
+        "id": "AsvyF-64N506"
       },
-      "outputs": [],
       "source": [
-        "def get_dataloader(dataset, n=0, batch_size=1, spd=True, mode=\"train\", size=None, graph=True):\n",
-        "    # Setup datasets\n",
-        "\n",
-        "    if dataset == \"random\":\n",
-        "        data = FolderDataset(f\"./dataset/{mode}/\", n, size=size, graph=graph)\n",
-        "    else:\n",
-        "        raise NotImplementedError(\"Dataset not implemented, Available: random\")\n",
-        "\n",
-        "    # Data Loaders\n",
-        "    if mode == \"train\":\n",
-        "        dataloader = DataLoader(data, batch_size=batch_size, shuffle=True)\n",
-        "    else:\n",
-        "        dataloader = DataLoader(data, batch_size=1, shuffle=False)\n",
-        "\n",
-        "    return dataloader"
+        "# **VALIDATION**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "m8StoNdBTKu4"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "class Preconditioner:\n",
@@ -1007,15 +1035,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AsvyF-64N506"
-      },
-      "source": [
-        "# **VALIDATION FUNCTION**"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
@@ -1094,12 +1113,19 @@
         "id": "JsVE6R9SOLkT"
       },
       "source": [
-        "# MAIN CODE"
+        "# **MODEL TRAINING**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## **BASELINE NEURALIF**"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "E4ci3LbMOPEG"
       },
@@ -1605,15 +1631,14 @@
         "\n",
         "# Test the model\n",
         "# wandb.run.summary[\"validation_chol\"] = best_val\n",
-        "print(\"Best validation loss:\", best_val)\n",
-        "\n"
+        "print(\"Best validation loss:\", best_val)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "WITH CLUSTERCGN IMPLEMENTED"
+        "## **CLUSTER-GCN**"
       ]
     },
     {
@@ -1672,7 +1697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1702,7 +1727,137 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "19it [01:34,  4.96s/it]"
+            "20it [01:39,  5.04s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 20/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "30it [02:30,  5.05s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 30/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "40it [03:21,  5.06s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 40/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "50it [04:11,  5.00s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 50/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "60it [05:01,  5.02s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 60/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "70it [05:52,  5.11s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 70/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "80it [06:41,  5.08s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 80/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "90it [07:33,  5.24s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 90/100 graphs\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100it [08:23,  5.04s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "  Partitioned 100/100 graphs\n",
+            "Preprocessing completed in 503.67 seconds\n",
+            "Average partitioning time: 5036.70ms per graph\n",
+            "✔ Cached partitions to ./partition_cache/train_n10000_k10_partitions.pkl\n",
+            "DataLoader ready!\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -2141,6 +2296,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **DEBUGGING**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2178,6 +2340,13 @@
         "for i, data in enumerate(train_loader):\n",
         "  if i == 1:\n",
         "    print (data)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **TESTING**"
       ]
     },
     {
